user page issue feature

--- a/WebContent/admin/userInfo/corporateMemberList.html
+++ b/WebContent/admin/userInfo/corporateMemberList.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/admin/layout.css">
     <link rel="stylesheet" href="../../css/admin/userInfo/list.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>등록된 업체 리스트</title>
 </head>
 <body>
-    <header id="header" class="header">
-        <h1><a href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        <nav>
-            <h1>메인메뉴</h1>
-            <ul>
-                <li><a href="">공지사항</a></li>
-                <li><a href="">이벤트</a></li>
-                <li><a href="">더보기</a></li>
-                <li><a href="">로그인</a></li>
-            </ul>
-        </nav>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+            </div>
+            <div>
+                <ul class="main-menu">
+                    <li class="sub-page">
+                        <a href="">로그인</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </header>
 
     <section class="body">
@@ -41,41 +47,38 @@
             </nav>
             <main id="main" class="main">
                 <div class="sub-container">
+                    
                     <div class="breadcrumb">
                         <ul class="breadcrumb-list">
-                            <li><i class="fas fa-home"></i>HOME ▶ </li>
-                            <li>회원관리 ▶ </li>
-                            <li>기업회원리스트</li>
+                            <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+                            <li>&nbsp;&nbsp;&nbsp;회원관리&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+                            <li>&nbsp;&nbsp;&nbsp;기업회원리스트&nbsp;&nbsp;&nbsp;</li>
                         </ul>
                     </div>
 
                     <div>
-                        <h1>등급별 회원수</h1>
+                        <h1>업체등록현황</h1>
                     </div>
                     <div class="list-board">
                         <table>
                             <thead>
                                 <tr>
-                                    <td class="col-sm">등급</td>
+                                    <td class="col-sm">현황</td>
                                     <td class="col-m">인원</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>실버</td>
+                                    <td>등록</td>
                                     <td>190명</td>
                                 </tr>
                                 <tr>
-                                    <td>골드</td>
+                                    <td>미등록</td>
                                     <td>35명</td>
                                 </tr>
                                 <tr>
-                                    <td>플레티넘</td>
-                                    <td>4명</td>
-                                </tr>
-                                <tr>
-                                    <td>다이아</td>
-                                    <td>1명</td>
+                                    <td>신청</td>
+                                    <td><a href="">4건</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -84,11 +87,8 @@
                     <div>
                         <h1>등록된 기업회원리스트</h1>
                         <select name="" id="">
-                            <option value="">전체등급</option>
-                            <option value="">실버</option>
-                            <option value="">골드</option>
-                            <option value="">플레티넘</option>
-                            <option value="">다이아</option>
+                            <option value="">이름순</option>
+                            <option value="">등록일자순</option>
                         </select>
                     </div>
                     <section>
@@ -98,21 +98,19 @@
                                     <tr>
                                         <td class="col-s">No.</td>
                                         <td class="col-sm">사업주명</td>
-                                        <td class="col-sm">닉네임</td>
                                         <td class="col-m">이메일</td>
-                                        <td class="col-sm">생년월일</td>
+                                        <td class="col-m">생년월일</td>
                                         <td class="col-m">연락처</td>
                                         <td class="col-m">등록일</td>
-                                        <td class="col-s"><input type="checkbox"></td>
+                                        <td class="col-sm">전체선택<input type="checkbox"></td>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td class="col-s">1</td>
                                         <td class="col-sm">조재희</td>
-                                        <td class="col-sm">닉네임</td>
                                         <td class="col-m">cjh@newlecture.com</td>
-                                        <td class="col-sm">000000</td>
+                                        <td class="col-sm">2020-00-00</td>
                                         <td class="col-m">010-0000-1111</td>
                                         <td class="col-m">2020-11-05</td>
                                         <td class="col-s"><input type="checkbox"></td>
@@ -120,9 +118,8 @@
                                     <tr>
                                         <td class="col-s">2</td>
                                         <td class="col-sm">신중언</td>
-                                        <td class="col-sm">닉네임</td>
                                         <td class="col-m">sje@newlecture.com</td>
-                                        <td class="col-sm">000000</td>
+                                        <td class="col-sm">0000-00-00</td>
                                         <td class="col-m">010-3462-8452</td>
                                         <td class="col-m">2020-11-05</td>
                                         <td class="col-s"><input type="checkbox"></td>
@@ -130,9 +127,8 @@
                                     <tr>
                                         <td class="col-s">3</td>
                                         <td class="col-sm">김병준</td>
-                                        <td class="col-sm">닉네임</td>
                                         <td class="col-m">kbj@newlecture.com</td>
-                                        <td class="col-sm">000000</td>
+                                        <td class="col-sm">0000-00-00</td>
                                         <td class="col-m">010-2365-5678</td>
                                         <td class="col-m">2020-11-14</td>
                                         <td class="col-s"><input type="checkbox"></td>
@@ -140,15 +136,50 @@
                                     <tr>
                                         <td class="col-s">4</td>
                                         <td class="col-sm">박수현</td>
-                                        <td class="col-sm">닉네임</td>
                                         <td class="col-m">psh@newlecture.com</td>
-                                        <td class="col-sm">000000</td>
+                                        <td class="col-sm">0000-00-00</td>
                                         <td class="col-m">010-3863-1263</td>
                                         <td class="col-m">2020-11-23</td>
                                         <td class="col-s"><input type="checkbox"></td>
                                     </tr>
                                     <tr class="btn-delete">
-                                        <td colspan="8"><input type="submit" value="삭제"></td>
+                                        <td colspan="8"><input type="submit" value="탈퇴"></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="7" class="no-border">
+                                            <div class="pager-container">
+                                                <div class="btn btn-prev">
+                                                    <span><a href="">이전</a></span>
+                                                </div>
+                                                <ul class="pager-list">
+                                                    <li class="active-page"><a href="">1</a></li>
+                                                    <li><a href="">2</a></li>
+                                                    <li><a href="">3</a></li>
+                                                    <li><a href="">4</a></li>
+                                                    <li><a href="">5</a></li>
+                                                    <li><a href="">6</a></li>
+                                                    <li><a href="">7</a></li>
+                                                    <li><a href="">8</a></li>
+                                                    <li><a href="">9</a></li>
+                                                    <li><a href="">10</a></li>
+                                                </ul>
+                                                <div class="btn btn-next">
+                                                    <span><a href="">다음</a></span>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <div>
+                                                    <form action="">
+                                                        <select name="search-category" id="">
+                                                            <option value="숙소명" selected>사업주명</option>
+                                                            <option value="예약자">이메일</option>
+                                                        </select>
+                                                        <input type="text">
+                                                        <input type="button" value="검색">
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
