--- a/WebContent/user/userInfo/reservationInfo.html
+++ b/WebContent/user/userInfo/reservationInfo.html
@@ -48,7 +48,7 @@
                 <ul>
                     <li><a href=""><i class="fas fa-exclamation-circle"></i>&nbsp;&nbsp;회원정보수정</a></li>
                     <li class="active"><a href=""><i class="far fa-calendar-check"></i>&nbsp;&nbsp;예약관리</a></li>
-                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;경매신청관리</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;제안신청관리</a></li>
                     <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;찜한상품조회</a></li>
                 </ul>
             </aside>
@@ -62,6 +62,48 @@
                 <section class="reservation-list-sec">
                     <h1>이용/취소내역</h1>
                     <ul>
+                        <li>
+                            <img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt="">
+                            <p>사용완료</p>
+                            <p>신촌 아이다호텔</p>
+                            <p>12.23 일 - 12.23 일 / 대실</p>
+                            <p><input type="button" value="다시예약"></p>
+                        </li>
+                        <li>
+                            <img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt="">
+                            <p>사용완료</p>
+                            <p>신촌 아이다호텔</p>
+                            <p>12.23 일 - 12.23 일 / 대실</p>
+                            <p><input type="button" value="다시예약"></p>
+                        </li>
+                        <li>
+                            <img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt="">
+                            <p>사용완료</p>
+                            <p>신촌 아이다호텔</p>
+                            <p>12.23 일 - 12.23 일 / 대실</p>
+                            <p><input type="button" value="다시예약"></p>
+                        </li>
+                        <li>
+                            <img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt="">
+                            <p>사용완료</p>
+                            <p>신촌 아이다호텔</p>
+                            <p>12.23 일 - 12.23 일 / 대실</p>
+                            <p><input type="button" value="다시예약"></p>
+                        </li>
+                        <li>
+                            <img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt="">
+                            <p>사용완료</p>
+                            <p>신촌 아이다호텔</p>
+                            <p>12.23 일 - 12.23 일 / 대실</p>
+                            <p><input type="button" value="다시예약"></p>
+                        </li>
+                        <li>
+                            <img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt="">
+                            <p>사용완료</p>
+                            <p>신촌 아이다호텔</p>
+                            <p>12.23 일 - 12.23 일 / 대실</p>
+                            <p><input type="button" value="다시예약"></p>
+                        </li>
                         <li>
                             <img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt="">
                             <p>사용완료</p>
