--- a/WebContent/admin/userInfo/detail.html
+++ b/WebContent/admin/userInfo/detail.html
@@ -4,29 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/admin/layout.css">
     <link rel="stylesheet" href="../../css/admin/userInfo/list.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>등록된 업체 리스트</title>
 </head>
 <body>
-    <header id="header" class="header">
-        <h1><a href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        <nav>
-            <h1>메인메뉴</h1>
-            <ul>
-                <li><a href="">공지사항</a></li>
-                <li><a href="">이벤트</a></li>
-                <li><a href="">더보기</a></li>
-                <li><a href="">로그인</a></li>
-            </ul>
-        </nav>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+            </div>
+            <div>
+                <ul class="main-menu">
+                    <li class="sub-page">
+                        <a href="">로그인</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </header>
 
     <section class="body">
         <aside id="aside" class="aside">
             <h1>회원관리</h1>
                 <ul>
-                    <li><a href="" class="active">개인회원리스트</a></li>
+                    <li><a href="">개인회원리스트</a></li>
                     <li><a href="">기업회원리스트</a></li>
                 </ul>
         </aside>
