--- a/WebContent/company/userInfo/reservationInfo.html
+++ b/WebContent/company/userInfo/reservationInfo.html
@@ -6,174 +6,199 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="../../css/jun.css">
+    <link rel="stylesheet" href="../../css/layout.css">
+    <link rel="stylesheet" href="../../css/company/userInfo/reservationInfo.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+
 </head>
 
 <body>
-    <div class="sec_header">
-        <header class="header pcHeader">
-            <div class="header_h1">
-                <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
             </div>
             <div>
-                <ul class="main_menu">
+                <ul class="main-menu">
                     <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
-                    <li><a href="">공지사항</a></li>
-                    <li><a href="">이벤트</a></li>
+                    <li><a href="">제안하기</a></li>
+                    <li><a href="">예약내역</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                        <div class="mega_menu">
+                        <div class="mega-menu">
                             <ul>
-                                <li><a href="">submenu</a></li>
-                                <li><a href="">submenu</a></li>
-                                <li><a href="">submenu</a></li>
+                                <li><a href="">내정보</a></li>
+                                <li><a href="">제안내역</a></li>
+                                <li><a href="">찜한 숙소</a></li>
+                                <li><a href="">로그아웃</a></li>
                             </ul>
                         </div>
                     </li>
                 </ul>
             </div>
-        </header>
-    </div>
-
-    <header class="header mobileHeader">
-        <div>
-            <a href=""><i class="fas fa-bars"></i></a>
-        </div>
-        <div class="header_h1">
-            <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        </div>
-        <div>
-            <a href=""><i class="fas fa-search"></i></a>
-        </div>
+        </section>
     </header>
 
-    <section class="userInfo_main">
-        <main class="sec_userInfo_main">
-            <!-- <h1>회원정보수정</h1> -->
-            <aside>
-                <h1>회원정보관리(기업)</h1>
+    <section class="container-sec">
+        <div class="container">
+            <aside id="aside" class="aside">
+                <!-- <h1>게시판</h1> -->
                 <ul>
-                    <li>
-                        <a href="">회원정보수정</a>
-                    </li>
-                    <li>
-                        <a href="">예약관리</a>
-                    </li>
-                    <li>
-                        <a href="">경매신청관리</a>
-                    </li>
-                    <li>
-                        <a href="">최근살펴본상품조회</a>
-                    </li>
-                    <li>
-                        <a href="">찜한상품조회</a>
-                    </li>
+                    <li><a href=""><i class="fas fa-exclamation-circle"></i>&nbsp;&nbsp;회원정보수정</a></li>
+                    <li class="active"><a href=""><i class="far fa-calendar-check"></i>&nbsp;&nbsp;예약관리</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;제안신청관리</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;숙소현황</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;숙소등록</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;골든타임관리</a></li>
                 </ul>
             </aside>
-
-            <div>
-                <section>
+            <main id="main" class="main">
+                <div class="breadcrumb">
+                    <ul class="breadcrumb-list">
+                        <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i> </li>
+                        <li>&nbsp;&nbsp;&nbsp;마이페이지</li>
+                    </ul>
+                </div>
+                <section class="reservation-list-sec">
                     <h1>예약관리</h1>
-
-                    <div>
-                        <ul style="display: flex;">
-                            <li>전체</li>
-                            <li>신라호텔</li>
-                            <li>**글램핑</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <li>
-                            <table border="1">
+                    <section class="category-sec">
+                        <div class="category-bar">
+                            <ul>
+                                <li>
+                                    <a class="category-img" href="">
+                                        <img src="../../images/main/all-icon.png" alt="">
+                                        <span>전체</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="category-img selected" href="">
+                                        <img src="../../images/main/hotel-icon.png" alt="">
+                                        <span>호텔</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="category-img" href="">
+                                        <img src="../../images/main/motel-icon.png" alt="">
+                                        <span>모텔</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="category-img" href="">
+                                        <img src="../../images/main/guesthouse-icon.png" alt="">
+                                        <span>게스트하우스</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="category-img" href="">
+                                        <img src="../../images/main/resort-icon.png" alt="">
+                                        <span>리조트</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="category-img" href="">
+                                        <img src="../../images/main/pension-icon.png" alt="">
+                                        <span>펜션</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <div class="table-container">
+                        <div>
+                            <select name="order-category" id="">
+                                <option value="체크인날짜순">체크인날짜순</option>
+                                <option value="예약자이름순">예약자이름순</option>
+                                <option value="예약상태순">예약상태순</option>
+                            </select>
+                        </div>
+                        <table>
+                            <thead>
                                 <tr>
-                                    <td colspan="2">예약정보</td>
-                                    <!-- <td></td> -->
-                                    <td colspan="2" rowspan="6"><input type="button" value="상세내역보기"></td>
-                                    <!-- <td></td> -->
-                                </tr>
-                                <tr>
-                                    <td>날짜</td>
-                                    <td>2020.12.07 ~ 2020.12.08</td>
-                                    <!-- <td></td> -->
-                                    <!-- <td></td> -->
-                                </tr>
-                                <tr>
-                                    <td>위치</td>
-                                    <td>서울시 강남구</td>
-                                    <!-- <td colspan="2" rowspan="2"><input type="button" value="역제안 수정"></td> -->
-                                    <!-- <td></td> -->
-                                </tr>
-                                <tr>
-                                    <td>인원수</td>
-                                    <td>성인2, 아동1</td>
-                                    <!-- <td></td> -->
-                                    <!-- <td></td> -->
-                                </tr>
-                                <tr>
-                                    <td>결제가격</td>
-                                    <td>50,000원</td>
-                                    <!-- <td colspan="2" rowspan="2"><input type="button" value="역제안 취소"></td> -->
-                                    <!-- <td></td> -->
-                                </tr>
-                                <tr>
+                                    <td>목록</td>
+                                    <td>숙소명</td>
+                                    <td>숙소종류</td>
+                                    <td>인원</td>
+                                    <td>금액</td>
+                                    <td>체크인</td>
+                                    <td>체크아웃</td>
+                                    <td>예약자</td>
                                     <td>상태</td>
-                                    <td>결제완료/취소/이용완료</td>
-                                    <!-- <td></td> -->
-                                    <!-- <td></td> -->
+                                    <td>비고</td>
                                 </tr>
-                            </table>
-                        </li>
-
-                        <li>
-                            <table border="1">
+                            </thead>
+                            <tbody>
                                 <tr>
-                                    <td colspan="2">예약정보</td>
-                                    <!-- <td></td> -->
-                                    <td colspan="2" rowspan="6"><input type="button" value="상세내역보기"></td>
-                                    <!-- <td></td> -->
-                                </tr>
-                                <tr>
-                                    <td>날짜</td>
-                                    <td>2020.12.07 ~ 2020.12.08</td>
-                                    <!-- <td></td> -->
-                                    <!-- <td></td> -->
+                                    <td>1</td>
+                                    <td>가람슬기 스파펜션</td>
+                                    <td>펜션</td>
+                                    <td>3인</td>
+                                    <td>119,000원</td>
+                                    <td>2020-11-01</td>
+                                    <td>2020-11-02</td>
+                                    <td>김병준</td>
+                                    <td>이용완료</td>
+                                    <td><input type="button" value="상세보기"></td>
                                 </tr>
                                 <tr>
-                                    <td>위치</td>
-                                    <td>서울시 강남구</td>
-                                    <!-- <td colspan="2" rowspan="2"><input type="button" value="역제안 수정"></td> -->
-                                    <!-- <td></td> -->
+                                    <td>2</td>
+                                    <td>가람슬기 스파펜션</td>
+                                    <td>펜션</td>
+                                    <td>3인</td>
+                                    <td>119,000원</td>
+                                    <td>2020-11-01</td>
+                                    <td>2020-11-02</td>
+                                    <td>김병준</td>
+                                    <td>이용완료</td>
+                                    <td><input type="button" value="상세보기"></td>
                                 </tr>
                                 <tr>
-                                    <td>인원수</td>
-                                    <td>성인2, 아동1</td>
-                                    <!-- <td></td> -->
-                                    <!-- <td></td> -->
+                                    <td colspan="10" class="no-border">
+                                        <div class="pager-container">
+                                            <div class="btn btn-prev">
+                                                <span><a href="">이전</a></span>
+                                            </div>
+                                            <ul class="pager-list">
+                                                <li class="active-page"><a href="">1</a></li>
+                                                <li><a href="">2</a></li>
+                                                <li><a href="">3</a></li>
+                                                <li><a href="">4</a></li>
+                                                <li><a href="">5</a></li>
+                                                <li><a href="">6</a></li>
+                                                <li><a href="">7</a></li>
+                                                <li><a href="">8</a></li>
+                                                <li><a href="">9</a></li>
+                                                <li><a href="">10</a></li>
+                                            </ul>
+                                            <div class="btn btn-next">
+                                                <span><a href="">다음</a></span>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div>
+                                                <form action="">
+                                                    <select name="search-category" id="">
+                                                        <option value="숙소명" selected>숙소명</option>
+                                                        <option value="예약자">예약자</option>
+                                                    </select>
+                                                    <input type="text">
+                                                    <input type="button" value="검색">
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </td>
                                 </tr>
-                                <tr>
-                                    <td>결제가격</td>
-                                    <td>50,000원</td>
-                                    <!-- <td colspan="2" rowspan="2"><input type="button" value="역제안 취소"></td> -->
-                                    <!-- <td></td> -->
-                                </tr>
-                                <tr>
-                                    <td>상태</td>
-                                    <td>결제완료/취소/이용완료</td>
-                                    <!-- <td></td> -->
-                                    <!-- <td></td> -->
-                                </tr>
-                            </table>
-                        </li>
+                            </tbody>
+                        </table>
                     </div>
-
                 </section>
-            </div>
-        </main>
+            </main>
+        </div>
     </section>
 
-    <section class="sec_footer">
-        <footer>
+    <section>
+        <footer id="footer" class="footer">
             <div>
                 <ul>
                     <li>
@@ -202,9 +227,9 @@
                     </li>
                     <li><a href="">콘텐츠산업진흥법에의한 표시</a></li>
                 </ul>
-
-                <p><b>고객행복센터 1577-8282</b> 오전 09:00 ~ 오후18:00</p>
-
+        
+                <p><b>고객행복센터 1577-8282</b>   오전 09:00 ~ 오후18:00</p>
+    
                 <address>
                     <span>(주)TEUM</span>
                     주소 : 서울특별시 종로구 인사동길 12 대일빌딩 15층
