사용자, 관리자 헤더 수정/리뷰기능/자잘한 것들

--- a/WebContent/admin/promotion/event/list.html
+++ b/WebContent/admin/promotion/event/list.html
@@ -57,7 +57,15 @@
                                 <li>&nbsp;&nbsp;&nbsp;이벤트 관리&nbsp;&nbsp;&nbsp;</li>
                             </ul>
                         </div>
-                        <h1>이벤트 리스트</h1>
+                        
+                        <form action="" class="search-form">
+                            <h1>이벤트 리스트</h1>
+                            <div>
+                                <input type="text" class="input-search" placeholder="제목을 입력하세요.">
+                                <input type="submit" class="search-submit-btn" value="검색">
+                            </div>
+                        </form>
+                        
                         <section>
                             <form action="" class="list-board">
                                 <table>
@@ -116,7 +124,7 @@
                                         </tr>
                                         <tr>
                                             <td colspan="8" class="no-border btn-row">
-                                                <input type="submit" value="글쓰기">
+                                                <input type="button" value="글쓰기">
                                                 <input type="submit" value="일괄공개">
                                                 <input type="submit" value="일괄삭제">
                                             </td>
