--- a/WebContent/event/detail.html
+++ b/WebContent/event/detail.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <ul class="main-menu">
-                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
                     <li><a href="">제안하기</a></li>
                     <li><a href="">예약내역</a></li>
                     <li class="sub-page">
@@ -34,7 +34,7 @@
                         </div>
                     </li>
                     <li class="sub-page">
-                        <a href="">로그인</a>
+                        <a href="" class="character"><i class="fas fa-sort-down"></i></a>
                         <div class="mega-menu">
                             <ul>
                                 <li><a href="">내정보</a></li>
@@ -67,15 +67,12 @@
                     </ul>
                 </div>
                 <section class="event-sec">
-                    <h1>이벤트 / Event</h1>
+                    <h1>이벤트 / <span>Event</span></h1>
+                    <h2>세스코 인증 청결 숙소 이벤트에 참여해 보세요!</h2>
+                    <h2>2020.01.01 ~ 2020.12.31</h2>
                     <section class="img-sec">
                         <div class="img-container">
-                            <img src="../../../images/event/detail1.png" alt="">
-                            <!-- <img src="../../../images/event/detail2.png" alt="">
-                            <img src="../../../images/event/detail3.png" alt="">
-                            <img src="../../../images/event/detail4.png" alt="">
-                            <img src="../../../images/event/detail5.png" alt="">
-                            <img src="../../../images/event/detail6.png" alt=""> -->
+                            <img src="/images/event/detail1.png" alt="">
                         </div>
                     </section>
                     <section class="page-list-sec">
