--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,11 +20,23 @@
             </div>
             <div>
                 <ul class="main-menu">
-                    <li class="header_search"><input type="text" placeholder="위치 또는 숙소명"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li class="header-search"><input type="text" placeholder="숙소명 또는 위치">
+                        <a href=""><i class="fas fa-search"></i></a>
+                    </li>
                     <li><a href="">제안하기</a></li>
                     <li><a href="">예약내역</a></li>
-                    <li><a href="">더보기</a></li>
-                    <li class="mypage"><a href="">로그인</a>
+                    <li class="sub-page">
+                        <a href="">더보기</a>
+                        <div class="mega-menu">
+                            <ul>
+                                <li><a href="">공지사항</a></li>
+                                <li><a href="">이벤트</a></li>
+                                <li><a href="">1:1 문의</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="sub-page">
+                        <a href="" class="character"><i class="fas fa-sort-down"></i></a>
                         <div class="mega-menu">
                             <ul>
                                 <li><a href="">내정보</a></li>
