--- a/WebContent/notice/list.html
+++ b/WebContent/notice/list.html
@@ -58,7 +58,7 @@
                 </div>
                 <section class="notice-sec">
                     <h1>공지사항 /
-                   			 <span>Notice<span>
+                        <span>Notice</span>
                     </h1>
                     
                     <ol class="notice-sec-list">
