--- a/WebContent/company/reverseOffer/detail.html
+++ b/WebContent/company/reverseOffer/detail.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <ul class="main-menu">
-                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
                     <li><a href="">제안하기</a></li>
                     <li><a href="">예약내역</a></li>
                     <li class="sub-page">
@@ -34,7 +34,7 @@
                         </div>
                     </li>
                     <li class="sub-page">
-                        <a href="">로그인</a>
+                        <a href="" class="character"><i class="fas fa-sort-down"></i></a>
                         <div class="mega-menu">
                             <ul>
                                 <li><a href="">내정보</a></li>
