--- a/WebContent/event/list.html
+++ b/WebContent/event/list.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <ul class="main-menu">
-                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
                     <li><a href="">제안하기</a></li>
                     <li><a href="">예약내역</a></li>
                     <li class="sub-page">
@@ -34,7 +34,7 @@
                         </div>
                     </li>
                     <li class="sub-page">
-                        <a href="">로그인</a>
+                        <a href="" class="character"><i class="fas fa-sort-down"></i></a>
                         <div class="mega-menu">
                             <ul>
                                 <li><a href="">내정보</a></li>
@@ -67,7 +67,7 @@
                     </ul>
                 </div>
                 <section class="event-sec">
-                    <h1>이벤트 / Event</h1>
+                    <h1>이벤트 / <span>Event</span></h1>
                     <ul class="event-list">
                         <li class="current-tab"><a href="">진행중인 이벤트</a></li>
                         <li><a href="">종료된 이벤트</a></li>
@@ -76,21 +76,21 @@
                         <h1>세스코 인증 청결 숙소 이벤트에 참여해 보세요!</h1>
                         <h2>2020.01.01 ~ 2020.12.31</h2>
                         <div class="scale">
-                            <a href=""><img src="../images/event/event1.png" alt=""></a>
+                            <a href=""><img src="/images/event/event1.png" alt=""></a>
                         </div>
                     </div>
                     <div class="event-img-container">
                         <h1>더블 혜택 할인받고 예약하세요!</h1>
                         <h2>2020.01.01 ~ 2020.12.31</h2>
                         <div class="scale">
-                            <a href=""><img src="../images/event/event2.png" alt=""></a>
+                            <a href=""><img src="/images/event/event2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="event-img-container">
                         <h1>안전여행 떠나고 10만원 상품권 획득기회!</h1>
                         <h2>2020.01.01 ~ 2020.12.31</h2>
                         <div class="scale">
-                            <a href=""><img src="../images/event/event3.png" alt=""></a>
+                            <a href=""><img src="/images/event/event3.png" alt=""></a>
                         </div>
                     </div>
                 </section>
