--- a/WebContent/admin/accommodations/list.html
+++ b/WebContent/admin/accommodations/list.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/reset.css">
-	<link rel="stylesheet" href="../../css/admin/layout.css">
-    <link rel="stylesheet" href="../../css/admin/accommodations/regList.css">
+    <link rel="stylesheet" href="/css/reset.css" type="text/css">
+	<link rel="stylesheet" href="/css/admin/layout.css">
+    <link rel="stylesheet" href="/css/admin/accommodations/regList.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
 	<script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
@@ -77,9 +77,9 @@
 	                <div class="sub-container">
 	                    <div class="breadcrumb">
 	                        <ul class="breadcrumb-list">
-	                            <li><i class="fas fa-home"></i>HOME ▶ </li>
-	                            <li>업체관리 ▶ </li>
-	                            <li>업체된 업체 리스트</li>
+	                            <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+	                            <li>&nbsp;&nbsp;&nbsp;업체관리&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+                                <li>&nbsp;&nbsp;&nbsp;업체된 업체 리스트&nbsp;&nbsp;&nbsp;</li>
 	                        </ul>
 	                    </div>
 						<h1>등록된 업체 리스트</h1>
@@ -159,6 +159,30 @@
                                             <td></td>
                                             <td></td>
                                             <td><button type="submit">삭제</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td colspan="8" class="no-border">
+                                                <div class="pager-container">
+                                                    <div class="btn btn-prev">
+                                                        <span><a href="">이전</a></span>
+                                                    </div>
+                                                    <ul class="pager-list">
+                                                        <li class="active-page"><a href="">1</a></li>
+                                                        <li><a href="">2</a></li>
+                                                        <li><a href="">3</a></li>
+                                                        <li><a href="">4</a></li>
+                                                        <li><a href="">5</a></li>
+                                                        <li><a href="">6</a></li>
+                                                        <li><a href="">7</a></li>
+                                                        <li><a href="">8</a></li>
+                                                        <li><a href="">9</a></li>
+                                                        <li><a href="">10</a></li>
+                                                    </ul>
+                                                    <div class="btn btn-next">
+                                                        <span><a href="">다음</a></span>
+                                                    </div>
+                                                </div>
+                                            </td>
                                         </tr>
                                     </tbody>
 								</table>
