--- a/WebContent/company/userInfo/memberInfo.html
+++ b/WebContent/company/userInfo/memberInfo.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="sec_header">
+    <div class="sec_header"></div>
         <header class="header pcHeader">
             <div class="header_h1">
                 <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
