event dao 수정 및 리뷰 js 추가

--- a/WebContent/user/review/reg.html
+++ b/WebContent/user/review/reg.html
@@ -77,14 +77,14 @@
                         </div>
                         <div class="user-name">조재희</div>
                         <div class="star-container">
-                            <i class="fas fa-star pick"></i>
-                            <i class="fas fa-star pick"></i>
-                            <i class="fas fa-star pick"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
                         <div class="comment-container">
-                            <textarea name="" id="" cols="47" rows="7" class="comment"></textarea>
+                            <textarea name="" id="" cols="47" rows="7" class="comment" placeholder="여러분의 리뷰를 귀 기울이겠습니다."></textarea>
                         </div>
                         <div class="submit-btn-container">
                             <input type="submit" class="submit-btn" value="리뷰 등록">
