--- a/WebContent/admin/promotion/event/edit.html
+++ b/WebContent/admin/promotion/event/edit.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="/js/admin/promotion/event/edit.js"></script>
     <title>이벤트 등록</title>
 </head>
 <body>
@@ -65,6 +66,13 @@
 	                                    <td class="col-l text-left">
 	                                        <input type="text" class="input-title" autofocus required>
 	                                        <input type="checkbox" class="checkbox-open"><span>즉시 공개</span>
+	                                    </td>
+                                    </tr>
+                                    <tr>
+	                                    <th class="col-m">이벤트 기간</th>
+	                                    <td class="col-l text-left">
+                                            <input type="date" class="input-date start-date" required> ~ 
+                                            <input type="date" class="input-date end-date" required>
 	                                    </td>
 	                                </tr>
 	                                <tr>
