--- a/WebContent/admin/promotion/event/reg.html
+++ b/WebContent/admin/promotion/event/reg.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="/js/admin/promotion/event/reg.js"></script>
     <title>이벤트 등록</title>
 </head>
 <body>
@@ -62,14 +63,21 @@
 	                                <tr>
 	                                    <th class="col-m">제목</th>
 	                                    <td class="col-l text-left">
-	                                        <input type="text" class="input-title" autofocus required>
+	                                        <input type="text" class="input-title" placeholder="제목을 입력하세요" autofocus required>
 	                                        <input type="checkbox" class="checkbox-open"><span>즉시 공개</span>
+	                                    </td>
+                                    </tr>
+                                    <tr>
+	                                    <th class="col-m">이벤트 기간</th>
+	                                    <td class="col-l text-left">
+                                            <input type="date" class="input-date start-date" required> ~ 
+                                            <input type="date" class="input-date end-date" required>
 	                                    </td>
 	                                </tr>
 	                                <tr>
 	                                    <th>첨부파일</th>
 	                                    <td class="text-left">
-	                                        <input type="file" class="input-file">
+	                                        <input type="file" class="input-file" required>
 	                                    </td>
 	                                </tr>
 	                                <tr>
