admin userInfo backend mod

--- a/WebContent/admin/userInfo/users/privateMemberdetail.html
+++ b/WebContent/admin/userInfo/users/privateMemberdetail.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="/css/layout.css">
-    <link rel="stylesheet" href="/css/admin/layout.css">
-    <link rel="stylesheet" href="../../css/admin/userInfo/list.css">
+    <link rel="stylesheet" href="../../../css/reset.css">
+    <link rel="stylesheet" href="../../../css/layout.css">
+    <link rel="stylesheet" href="../../../css/admin/layout.css">
+    <link rel="stylesheet" href="../../../css/admin/userInfo/list.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
@@ -32,7 +32,7 @@
         <aside id="aside" class="aside">
             <h1>회원관리</h1>
                 <ul>
-                    <li><a href="">개인회원리스트</a></li>
+                    <li class="active"><a href="">개인회원리스트</a></li>
                     <li><a href="">기업회원리스트</a></li>
                 </ul>
         </aside>
