--- a/WebContent/admin/promotion/event/detail.html
+++ b/WebContent/admin/promotion/event/detail.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="/js/admin/promotion/event/detail.js"></script>
     <title>이벤트 상세페이지</title>
 </head>
 <body>
@@ -59,11 +60,6 @@
                         <section class="img-sec">
                             <div class="img-container">
                                 <img src="../../../images/event/detail1.png" alt="">
-                                <!-- <img src="../../../images/event/detail2.png" alt="">
-                                <img src="../../../images/event/detail3.png" alt="">
-                                <img src="../../../images/event/detail4.png" alt="">
-                                <img src="../../../images/event/detail5.png" alt="">
-                                <img src="../../../images/event/detail6.png" alt=""> -->
                             </div>
                         </section>
                         <form action="edit" method="post">
