--- a/WebContent/admin/promotion/event/edit.html
+++ b/WebContent/admin/promotion/event/edit.html
@@ -89,7 +89,7 @@
 	                                </tr>
 	                            </table>
 	                            <div>
-	                                <input class="btn btn-submit" type="submit" value="등록" />
+	                                <input class="btn btn-submit" type="submit" value="수정" />
 	                                <button class="btn btn-cancel" onclick="location.href='list.jsp'">취소</button>
 	                            </div>
 	                        </form>
