--- a/WebContent/admin/promotion/event/list.html
+++ b/WebContent/admin/promotion/event/list.html
@@ -125,8 +125,8 @@
                                         <tr>
                                             <td colspan="8" class="no-border btn-row">
                                                 <input type="button" value="글쓰기">
-                                                <input type="submit" value="일괄공개">
-                                                <input type="submit" value="일괄삭제">
+                                                <input type="submit" class="open-btn" value="일괄공개">
+                                                <input type="submit" class="del-btn" value="일괄삭제">
                                             </td>
                                         </tr>
                                         <tr>
