--- a/WebContent/admin/promotion/event/reg.html
+++ b/WebContent/admin/promotion/event/reg.html
@@ -75,7 +75,13 @@
 	                                    </td>
 	                                </tr>
 	                                <tr>
-	                                    <th>첨부파일</th>
+	                                    <th>첨부파일(타이틀용)</th>
+	                                    <td class="text-left">
+	                                        <input type="file" class="input-file" required>
+	                                    </td>
+                                    </tr>
+                                    <tr>
+	                                    <th>첨부파일(컨텐츠용)</th>
 	                                    <td class="text-left">
 	                                        <input type="file" class="input-file" required>
 	                                    </td>
